<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentbgdangnhap"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:id="@+id/ivdn"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/text2" />

        <EditText
            android:id="@+id/etmaildn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFFFFF"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/etmkdn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFFFFF"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/radius_button"
            android:backgroundTint="@color/green">
            <Button
                android:id="@+id/bdangnhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparentbgdangnhap"
                android:drawablePadding="10dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/dangnhap"
                android:textColor="@color/white"
                />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoac"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/bdnfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/com_facebook_blue"
            android:drawableLeft="@drawable/com_facebook_button_icon"
            android:paddingLeft="10dp"
            android:text="@string/dangnhapfb"
            android:textAllCaps="false"
            android:maxLines="1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bdngg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/dangnhapgg"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/tvquenmk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/quenmk"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvdky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toRightOf="@id/tvquenmk"
                android:text="@string/dky"
                android:layout_alignParentEnd="true"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF" />
        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>