<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentbgdangnhap"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <ImageView
                android:id="@+id/ivdky"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/text2" />

            <TextView
                android:id="@+id/tvchuoikhoiphucmk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/chuoikhoiphucmk"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etmailkp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/green">

                <Button
                    android:id="@+id/bkpmk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparentbgdangnhap"
                    android:drawablePadding="10dp"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:text="@string/gui"
                    android:textColor="@color/white" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/tvquenmk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/kophaithanhvien"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/tvdkykp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@id/tvquenmk"
                    android:text="@string/dky"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>


        </LinearLayout>

    </FrameLayout>

</RelativeLayout>