<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentbgdangnhap"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <ImageView
                android:id="@+id/ivdky"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/text2" />

            <EditText
                android:id="@+id/etmaildk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/etmkdk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/matkhau"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/etmkdk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/matkhau2"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/green">

                <Button
                    android:id="@+id/bdkydk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparentbgdangnhap"
                    android:drawablePadding="10dp"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:text="@string/dky"
                    android:textColor="@color/white" />
            </FrameLayout>


        </LinearLayout>
    </FrameLayout>

</RelativeLayout>